Fixing overflow whitespace on mobile

--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
 
+@media (max-width: 749px) {
+    .container {
+        display: flex;
+        justify-content: left;
+        overflow: hidden;
+    }
+}
+
+@media (min-width: 750px) {
+    .container {
+        display: flex;
+        justify-content: center;
+        overflow: hidden;
+    }
+}
+
 .mapbox {
     display: flex;
     justify-content: center;
@@ -12,20 +28,6 @@
 #map {
     display: flex;
     justify-content: center;
-    width: 750px;
-    height: 786px;
-}
-
-@media (max-width: 749px) {
-    .container {
-        display: flex;
-        justify-content: left;
-    }
-}
-
-@media (min-width: 750px) {
-    .container {
-        display: flex;
-        justify-content: center;
-    }
+    min-width: 750px;
+    max-height: 786px;
 }
